# endless-galaxy

./: README.md  netlify.toml
.github/workflows/: deploy.yml
endless-galaxy-auth-server/: .editorconfig  .env.example  .gitignore  ace-manifest.json  env.ts  package.json
endless-galaxy-auth-server/config/: auth.ts  cors.ts  database.ts  mail.ts
endless-galaxy-auth-server/providers/: AppProvider.ts
endless-galaxy-auth-server/start/: kernel.ts  routes.ts
endless-galaxy-client/: .env.example  .gitignore  .swpfile  README.md  nuxt.config.js  package.json  tailwind.config.js  tsconfig.json
endless-galaxy-client/components/: CircleProgress.vue  ConstructionFactoryTile.vue  ConstructionShopTile.vue  ConstructionTile.vue  ConstructionTileRecipe.vue  ConstructionTileRecipeItem.vue  ConstructionWarehouseTile.vue  DevInspect.vue  FactoryListEntry.vue  FleetShipEntry.vue  GameButton.vue  GameContainer.vue  GameModal.vue  GameTitle.vue  GameTooltip.vue  InventoryItemSelector.vue  InventoryStackTile.vue  ItemIcon.vue  LoadingIndicator.vue  LoginPanel.vue  MarketBuyOrderListing.vue  MarketSellOrderListing.vue  MoneyInput.vue  MoneyLabel.vue  OnboardingSetCompanyNamePanel.vue  PlanetListEntry.vue  ShipButton.vue  ShipyardOrderEntry.vue  ShipyardShipTypeOption.vue  TabbedPage.vue  TabbedPageTab.vue  TickOffsetCountdown.vue  TopBar.vue  (+5 more)
endless-galaxy-game-server/: .gitignore  Cargo.toml
endless-galaxy-game-server/src/: client_events.rs  main.rs  ws.rs
endless-galaxy-server/: .adonisrc.json  .env.example  .gitignore  docker-compose.yml  env.ts  package.json  tsconfig.json
(+329 files in other folders)
