[package]
name = "endless-galaxy-game-server"
version = "0.1.0"
edition = "2018"


[dependencies]
chrono = "0.4"
bevy = { version = "0.5", default-features = false, features = ["dynamic", "serialize"] }
crossbeam = "0.8"
dotenv = "0.15"
querystring = "1"
ron = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tungstenite = "0.15"
ureq = "2"


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
